--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Setup Practice</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Hello World to all bootcampers</h1>
 </body>
 </html>
